fix layout issues

--- a/components/css-modules/header.module.css
+++ b/components/css-modules/header.module.css
@@ -1,4 +1,5 @@
 .header {
+    color: #2b008b ;
     background-color: #64baaa;
     display: flex;
     justify-content: space-between;
