--- a/components/css-modules/introduction.module.css
+++ b/components/css-modules/introduction.module.css
@@ -1,7 +1,7 @@
 .jumbotron {
     background-color: #64BAAA;
     color: #2B008B;
-    margin: 5rem auto 2rem auto;
+    margin: 3rem auto 2rem auto;
     padding: 2.5rem 5rem;
     width: 40%;
     border-radius: 1rem;
