--- a/styles/globals.css
+++ b/styles/globals.css
@@ -107,4 +107,25 @@
     margin: 0;
     font-family: josefin-regular;
 }
+
+html {
+    color: #2b008b ;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
+body {
+    background-color: #c4fcf0 ;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+    background-image:  radial-gradient(#2b008b 2px, transparent 2px), radial-gradient(#444cf7 2px, #c4fcf0 2px);
+    background-size: 80px 80px;
+    background-position: 0 0,40px 40px;
+}
   
